@@ -34,6 +34,8 @@ Version 4.2.1  [ under development ]
             - Only writes .rga data files for cases in which at least
               one triangulation was found.
             - New option --dryrun for a quick overview of the search space.
+        trisetcmp:
+            - New utility for comparing two different sets of triangulations.
 
 Version 4.2  [ 7 July, 2005 ]
 
